# MTG-Multiverse-Studio

./: .env.example  .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  test_backend_tui.py  vite.config.ts
Documentation/: README.md  ROADMAP.md
Documentation/guides/: FRONTEND_INTEGRATION.md
Documentation/plans/: BACKEND_VOLLPLAN.md  FRONTEND_ARCHITEKTUR_PLAN.md  IMPORT_STRATEGY.md  RUST_BACKEND_PLAN.md
Documentation/reference/: FEATURE_RESEARCH.md  UMSETZUNGSMOGLICHKEITEN.md
Documentation/reviews/: ARCHITECTURE_REVIEW.md  CODE_OPTIMIZATION.md
Documentation/roadmap/: ROADMAP.md
assets/stories/: README.md
src/: App.tsx  index.css  test.html
src-tauri/: Cargo.toml  mtg_multiverse_studio.db-shm  mtg_multiverse_studio.db-wal  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  models.rs
src-tauri/src/db/: card_repo.rs  collection_repo.rs  connection.rs  deck_repo.rs  lore_repo.rs  mod.rs  schema.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_fts5.sql  003_deck_category.sql  004_collection_ext.sql  005_sets_ext.sql  006_prices.sql
src-tauri/src/import_engine/: collection_import.rs  mod.rs
src-tauri/src/market/: cardmarket.rs  mod.rs  tcgplayer.rs
src-tauri/src/scryfall/: client.rs  mod.rs  models.rs
src-tauri/src/services/: card_service.rs  deck_service.rs  lore_service.rs  mod.rs  price_service.rs
src-tauri/src/utils/: error.rs  mod.rs
src/components/layout/: Layout.tsx
src/components/ui/: Button.tsx  Card.tsx  CardPreview.tsx  GlassPanel.tsx  SearchInput.tsx
src/pages/: CollectionPage.tsx  DeckDetailPage.tsx  DeckbuilderPage.tsx  DesignShowcase.tsx  HubPage.tsx  LoreDetailPage.tsx  LorePage.tsx  SettingsPage.tsx
src/services/: api.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: helpers.ts  loreReferences.tsx
