[package]
name = "mtg-multiverse-studio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

# === Datenbank (SQLite) ===
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# === HTTP-Client für Scryfall API ===
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# === Lokale KI (Candle / llama.cpp) ===
candle-core = { version = "0.x", optional = true }
candle-transformers = { version = "0.x", optional = true }
candle-nn = { version = "0.x", optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
