[package]
name = "mtg-multiverse-studio"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# === Tauri (Core) ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

# === Datenbank (SQLite) ===
rusqlite = { version = "0.31", features = ["bundled"] }

# === HTTP-Client für Scryfall API ===
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# === API Authentication (Cardmarket OAuth 1.0a, TCGPlayer) ===
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
percent-encoding = "2"

# === Streaming & Compression (Bulk Import) ===
flate2 = "1.0"
clap = { version = "4", features = ["derive"] }

# === Caching ===
lru = "0.12"
urlencoding = "2.1"

# === Markdown Parsing (für Lore) ===
pulldown-cmark = "0.9"
serde_yaml = "0.9"
frontmatter = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# === Random number generation (für Goldfishing) ===
rand = "0.8"

# === Logging/Debugging ===
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

# === Lokale KI (Candle / llama.cpp) — später aktivieren ===
# candle-core = { version = "0.x", optional = true }
# candle-transformers = { version = "0.x", optional = true }
# candle-nn = { version = "0.x", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[[bin]]
name = "mtg-multiverse-studio"
path = "src/main.rs"

[[bin]]
name = "mtg-import"
path = "src/bin/import.rs"
